--- a/single.html
+++ b/single.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         
-        <section class="top-bar pb-4 pt-4 mt-5 d-flex justify-content-center">
+        <section class="top-bar pb-4 pt-4 mt-5 d-flex justify-content-center flex-column">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 col-lg-3">
@@ -85,7 +85,7 @@
                                         <h4 class="heading__category fw-bold">Depression</h4>
                                         <h3 class="fw-bolder">Surfing in Maldives</h3>
                                     </div>
-                                    <a href="single.html" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
+                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
                                 </div>
                                 <p class="paragraph text-black-50 fs-5 mt-2">
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -102,7 +102,7 @@
                                         <h4 class="heading__category fw-bold">Depression</h4>
                                         <h3 class="fw-bolder">Surfing in Maldives</h3>
                                     </div>
-                                    <a href="single.html" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
+                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
                                 </div>
                                 <p class="paragraph text-black-50 fs-5 mt-2">
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -119,7 +119,7 @@
                                         <h4 class="heading__category fw-bold">Depression</h4>
                                         <h3 class="fw-bolder">Surfing in Maldives</h3>
                                     </div>
-                                    <a href="single.html" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
+                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
                                 </div>
                                 <p class="paragraph text-black-50 fs-5 mt-2">
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -136,7 +136,7 @@
                                         <h4 class="heading__category fw-bold">Depression</h4>
                                         <h3 class="fw-bolder">Surfing in Maldives</h3>
                                     </div>
-                                    <a href="single.html" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
+                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
                                 </div>
                                 <p class="paragraph text-black-50 fs-5 mt-2">
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
