--- a/single.html
+++ b/single.html
@@ -16,63 +16,72 @@
     </head>
     <body>
         
-        <section class="top-bar pb-4 pt-4 mt-5 d-flex justify-content-center flex-column">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6 col-lg-3">
-                        <h3 class="text-uppercase fw-bold">Discover</h3>
-                        <p class="top-bar__text">Our Latest Articles</p>
-                    </div>
-                    <div class="col-md-6 col-lg-5 me-auto text-center">
-                        <div class="row">
-                            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-                                <div class="card">
-                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="img-fluid card-img-top" alt="Depression">
-                                    <div class="">
-                                        <p class="card-text fs-4">Depression</p>
-                                    </div>
+        <section class="content d-flex">
+            <div class="container d-flex">
+                <nav class="side-bar p-5 ">
+                    <h3 class="text-uppercase fw-bold">Discover</h3>
+                    <p class="top-bar__text">Our Latest Articles</p>
+                    <div class="side-bar__cards text-center">
+                        <div class="mb-4 mt-4">
+                            <div class="card">
+                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="img-fluid card-img-top" alt="Depression">
+                                <div class="">
+                                    <p class="card-text fs-4">Depression</p>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-                                <div class="card">
-                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
-                                    <div class="">
-                                        <p class="card-text fs-4">Life Coach</p>
-                                    </div>
+                        </div>
+                        <div class="mb-4">
+                            <div class="card">
+                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
+                                <div class="">
+                                    <p class="card-text fs-4">Life Coach</p>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-                                <div class="card">
-                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
-                                    <div class="">
-                                        <p class="card-text fs-4">Yoga</p>
-                                    </div>
+                        </div>
+                        <div class="mb-4">
+                            <div class="card">
+                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
+                                <div class="">
+                                    <p class="card-text fs-4">Yoga</p>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-                                <div class="card">
-                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
-                                    <div class="">
-                                        <p class="card-text fs-4">Nutrition</p>
-                                    </div>
+                        </div>
+                        <div class="mb-4">
+                            <div class="card">
+                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
+                                <div class="">
+                                    <p class="card-text fs-4">Nutrition</p>
                                 </div>
-                            </div>  
-                        </div>  
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
-                        <form class="d-flex" action="#">
-                            <button class="search__button fs-4">
-                                <i class="fa-solid fa-magnifying-glass"></i>
-                            </button>
-                            <input class="form-control search__input me-2 w-100 p-2 ps-5 fs-4" type="search" placeholder="Search Articles" aria-label="Search Articles">
-                            
-                        </form>
-                    </div>
+            </nav>    
+            <main class="article-content mt-5 ms-5">
+                <div class="container d-flex flex-column">
+                   <a href="index.html"> <i class="fa-solid fa-3x fa-arrow-left align-self-start mb-3 article-back"></i></a>
+                    <img src="img/Rectangle 2.png" alt="article Photo" class="img-fluid">
+                    <h1 class="fw-bolder">Surfing in Maldives</h1>
+                    <p class="paragraph text-black-50 fs-5 mt-2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <p class="paragraph text-black-50 fs-5 mt-2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <p class="paragraph text-black-50 fs-5 mt-2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <p class="paragraph text-black-50 fs-5 mt-2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <p class="paragraph text-black-50 fs-5 mt-2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
                 </div>
-            </div>
-        </section>
+            </main>
+            </div>            
+        </section>  
 
-        <section class="articles pb-5 pt-5 ">
+        <!-- <section class="articles pb-5 pt-5 ">
             <div class="container pb-3 pt-3">
                 <h1 class="articles__heading text-center fw-bold position-relative fw-bold">Latest Articles</h1>
                 <div class="row mt-5">
@@ -149,7 +158,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/all.min.js"></script>
