--- a/single.html
+++ b/single.html
@@ -17,40 +17,42 @@
     <body>
         
         <section class="content d-flex">
-            <div class="container d-flex">
+            <div class="container d-flex flex-column flex-md-row">
                 <nav class="side-bar p-5 ">
                     <h3 class="text-uppercase fw-bold">Discover</h3>
                     <p class="top-bar__text">Our Latest Articles</p>
-                    <div class="side-bar__cards text-center">
-                        <div class="mb-4 mt-4">
-                            <div class="card">
-                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="img-fluid card-img-top" alt="Depression">
-                                <div class="">
-                                    <p class="card-text fs-4">Depression</p>
+                    <div class="side-bar__cards text-center d-sm-flex flex-wrap">
+                        <div class="row">                        
+                            <div class="col-sm-6 col-md-12 col-lg-12 mb-4 mt-4">
+                                <div class="card">
+                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="img-fluid card-img-top" alt="Depression">
+                                    <div class="">
+                                        <p class="card-text fs-4">Depression</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="mb-4">
-                            <div class="card">
-                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
-                                <div class="">
-                                    <p class="card-text fs-4">Life Coach</p>
+                            <div class="col-sm-6 col-md-12 col-lg-12 mb-4">
+                                <div class="card">
+                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
+                                    <div class="">
+                                        <p class="card-text fs-4">Life Coach</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="mb-4">
-                            <div class="card">
-                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
-                                <div class="">
-                                    <p class="card-text fs-4">Yoga</p>
+                            <div class="col-sm-6 col-md-12 col-lg-12 mb-4">
+                                <div class="card">
+                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
+                                    <div class="">
+                                        <p class="card-text fs-4">Yoga</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="mb-4">
-                            <div class="card">
-                                <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
-                                <div class="">
-                                    <p class="card-text fs-4">Nutrition</p>
+                            <div class="col-sm-6 col-md-12 col-lg-12 mb-4">
+                                <div class="card">
+                                    <img src="img/how-to-cope-with-anxiety-and-depression-722x406.png" class="card-img-top img-fluid" alt="Depression">
+                                    <div class="">
+                                        <p class="card-text fs-4">Nutrition</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -81,84 +83,7 @@
             </div>            
         </section>  
 
-        <!-- <section class="articles pb-5 pt-5 ">
-            <div class="container pb-3 pt-3">
-                <h1 class="articles__heading text-center fw-bold position-relative fw-bold">Latest Articles</h1>
-                <div class="row mt-5">
-                    <div class="col-md-6 mt-5 mb-5">
-                        <div class="card">
-                            <img src="img/Rectangle 2.png" class="card-img-top" alt="">
-                            <div class="card-body">
-                                <div class="card__heading text-start d-flex align-items-center">
-                                    <div>
-                                        <h4 class="heading__category fw-bold">Depression</h4>
-                                        <h3 class="fw-bolder">Surfing in Maldives</h3>
-                                    </div>
-                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
-                                </div>
-                                <p class="paragraph text-black-50 fs-5 mt-2">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mt-5 mb-5">
-                        <div class="card">
-                            <img src="img/Rectangle 2.png" class="card-img-top" alt="">
-                            <div class="card-body">
-                                <div class="card__heading text-start d-flex align-items-center">
-                                    <div>
-                                        <h4 class="heading__category fw-bold">Depression</h4>
-                                        <h3 class="fw-bolder">Surfing in Maldives</h3>
-                                    </div>
-                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
-                                </div>
-                                <p class="paragraph text-black-50 fs-5 mt-2">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-5">
-                        <div class="card">
-                            <img src="img/Rectangle 2.png" class="card-img-top" alt="">
-                            <div class="card-body">
-                                <div class="card__heading text-start d-flex align-items-center">
-                                    <div>
-                                        <h4 class="heading__category fw-bold">Depression</h4>
-                                        <h3 class="fw-bolder">Surfing in Maldives</h3>
-                                    </div>
-                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
-                                </div>
-                                <p class="paragraph text-black-50 fs-5 mt-2">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-5">
-                        <div class="card">
-                            <img src="img/Rectangle 2.png" class="card-img-top" alt="">
-                            <div class="card-body">
-                                <div class="card__heading text-start d-flex align-items-center">
-                                    <div>
-                                        <h4 class="heading__category fw-bold">Depression</h4>
-                                        <h3 class="fw-bolder">Surfing in Maldives</h3>
-                                    </div>
-                                    <a href="#" class="ms-auto btn card__btn rounded-pill ps-3 pe-3 fs-5">Continue Reading</a>
-                                </div>
-                                <p class="paragraph text-black-50 fs-5 mt-2">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="load d-flex justify-content-center">
-                        <a href="#" class="w-auto rounded-3 text-center btn card__btn p-2 ps-4 pe-4 fs-5">Load More</a>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+        
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/all.min.js"></script>
